Create endpoints for model relations
