# Saitynas_API/Controllers/WorkplacesController.cs
@@ -1,8 +1,10 @@
 using System.Collections.Generic;
 using Microsoft.AspNetCore.Mvc;
 using Saitynas_API.Models;
+using Saitynas_API.Models.Database;
 using Saitynas_API.Models.DTO.Common;
 using Saitynas_API.Models.MessageEntity.DTO;
+using Saitynas_API.Models.SpecialistEntity.DTO;
 using Saitynas_API.Models.WorkplaceEntity.DTO;
 
 namespace Saitynas_API.Controllers
@@ -41,6 +43,36 @@ namespace Saitynas_API.Controllers
             if (id != 1) return ApiNotFound();
             
             var dto = new GetObjectDTO<GetWorkplaceDTO>(GetWorkplaceDTO.Mocked);
+
+            return Ok(dto);
+        }
+        
+        [HttpGet("{id:int}/specialists")]
+        public ActionResult<GetListDTO<GetSpecialistDTO>> GetWorkplaceSpecialists(int id)
+        {
+            if (id != 1) return ApiNotFound();
+            
+            var specialists = new List<GetSpecialistDTO>
+            {
+                new()
+                {
+                    Id = 3,
+                    FirstName = "Test",
+                    LastName = "Doctor",
+                    Address = "Test str. 22",
+                    Speciality = SpecialityId.Other.ToString()
+                },
+                new()
+                {
+                    Id = 2,
+                    FirstName = "Good",
+                    LastName = "Doktor",
+                    Address = "Test str. 22",
+                    Speciality = SpecialityId.Other.ToString()
+                }
+            };
+        
+            var dto = new GetListDTO<GetSpecialistDTO>(specialists);
 
             return Ok(dto);
         }
